--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,11 @@
 [build]
   base = "website/"
   publish = "website/dist/"
-  command = "npm run build"
+  command = "npm run build --verbose"
 [build.processing]
   skip_processing = true
 
 [template]
 [template.environment]
-  TITLE = "Set your site title here. I am required."
-  KVDB_URL = "Set the URL to your kvdb bucket with the key suffix. I am required."
+  TITLE = "Status"
+  KVDB_URL = "https://ya.ru"
